@@ -1,4 +1,5 @@
-/* uDig - User Friendly Desktop Internet GIS client
+/**
+ * uDig - User Friendly Desktop Internet GIS client
  * http://udig.refractions.net
  * (C) 2010, Refractions Research Inc.
  *
@@ -14,34 +15,33 @@ import java.net.URL;
 import org.locationtech.udig.catalog.internal.wmt.WMTService;
 
 public class WMTSourceFactory {
-    
-    // todo: make every WMTSource class singleton, so that the cache is reused!
-    public static WMTSource createSource(WMTService service, URL url, 
-            String resourceId) throws Throwable {
+
+    // TODO: make every WMTSource class singleton, so that the cache is reused!
+    public static WMTSource createSource(WMTService service, URL url, String resourceId)
+            throws Throwable {
         WMTSource source;
-                
+
         String className = getClassFromUrl(url);
-        source = (WMTSource) Class.forName(className).newInstance();
-        
+        source = (WMTSource) Class.forName(className).getDeclaredConstructor().newInstance();
+
         source.init(resourceId);
         source.setWmtService(service);
 
         return source;
     }
-    
+
     /**
-     * Strip out the start of the url:
-     * 
-     * wmt://localhost/wmt/org.locationtech.udig.catalog.internal.wmt.wmtsource.OSMSource
-     *  -->
-     *  org.locationtech.udig.catalog.internal.wmt.wmtsource.OSMSource 
+     * Strip out the start of the URL:
+     *
+     * wmt://localhost/wmt/org.locationtech.udig.catalog.internal.wmt.wmtsource.OSMSource -->
+     * org.locationtech.udig.catalog.internal.wmt.wmtsource.OSMSource
      *
      * @param url
      * @return
      */
     public static String getClassFromUrl(URL url) {
         String withoutId = url.toString().replace(WMTService.ID, ""); //$NON-NLS-1$
-        
+
         int posSlash = withoutId.indexOf("/"); //$NON-NLS-1$
         if (posSlash >= 0) {
             return withoutId.substring(0, posSlash);
@@ -49,7 +49,7 @@ public class WMTSourceFactory {
             return withoutId;
         }
     }
-    
+
     /**
      * Should be used only when testing!
      *
@@ -59,16 +59,16 @@ public class WMTSourceFactory {
      * @param noException
      * @return
      */
-    public static WMTSource createSource(WMTService service, URL url, 
-            String resourceId, boolean noException) {
+    public static WMTSource createSource(WMTService service, URL url, String resourceId,
+            boolean noException) {
         WMTSource source;
-        
-        try{
+
+        try {
             source = createSource(service, url, resourceId);
         } catch (Throwable exc) {
             source = null;
         }
-        
+
         return source;
     }
 }
